--- a/src/DrumBeatDesigner/DrumBeatDesigner.csproj
+++ b/src/DrumBeatDesigner/DrumBeatDesigner.csproj
@@ -58,7 +58,7 @@
     </Reference>
     <Reference Include="MoonAndSun.Commons, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\MoonAndSun.Commons\trunk\src\Output\Release\MoonAndSun.Commons.dll</HintPath>
+      <HintPath>..\..\lib\MoonAndSun.Commons.dll</HintPath>
     </Reference>
     <Reference Include="NAudio, Version=1.7.0.11, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
