First commit of multi-pattern songs.

--- a/src/DrumBeatDesigner.Test/DrumBeatDesigner.Test.csproj
+++ b/src/DrumBeatDesigner.Test/DrumBeatDesigner.Test.csproj
@@ -67,6 +67,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="TestProject.dbd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
