--- a/src/DrumBeatDesigner/packages.config
+++ b/src/DrumBeatDesigner/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="1.9.0" targetFramework="net45" />
+  <package id="NAudio" version="1.8.4" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.5" targetFramework="net45" />
   <package id="Prism" version="4.1.0.0" targetFramework="net45" />
   <package id="Prism.UnityExtensions" version="4.1.0.0" targetFramework="net45" />
