--- a/src/DrumBeatDesigner/DrumBeatDesigner.csproj
+++ b/src/DrumBeatDesigner/DrumBeatDesigner.csproj
@@ -34,6 +34,26 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Expression.Interactions">
       <HintPath>..\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Expression.Interactions.dll</HintPath>
@@ -108,14 +128,17 @@
     </Compile>
     <Compile Include="ISoundFileValidator.cs" />
     <Compile Include="Models\Beat.cs" />
+    <Compile Include="Models\PatternCollection.cs" />
     <Compile Include="Models\PatternExporter.cs" />
     <Compile Include="Models\Pattern.cs" />
     <Compile Include="Models\PatternItem.cs" />
     <Compile Include="Models\PatternPlayer.cs" />
     <Compile Include="Models\ProjectSerializer.cs" />
+    <Compile Include="Models\SongExporter2.cs" />
     <Compile Include="Models\SongPlayer.cs" />
     <Compile Include="Models\Sound.cs" />
     <Compile Include="SoundFileValidator.cs" />
+    <Compile Include="StreamTracker.cs" />
     <Compile Include="ViewModels\ExportLoopViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Page Include="ExportLoopWindow.xaml">
